@@ -1,3 +1,11 @@
+2005-08-03  Paolo Maggi  <paolo@gnome.org>
+
+	* gedit-document.c (get_uri_shortname_for_display): cleaned up
+
+	Fixed bug #137539: recent files menu broken with very long file names.
+
+	* recent-files/*: sync to libegg. 
+
 2005-08-03  Paolo Borelli  <pborelli@katamail.com>
 
 	* gedit-view.c: workaround gtktextview scrolling bug. bug #172277.
